Version 2009110701
+ Modernized Makefile.PL

Version 2009040401
+ Move to git.
+ Modernization.

Version 1.1
+ Initial revision